# ParsingAutorizzazioniZonaAGESCI

./: .gitignore  .mise.toml  CLAUDE.md  README.md  TODO.md  pyproject.toml
src/autorizzazioni_agesci/: __init__.py  cli.py  parser.py
tests/: test_integration.py  test_unit.py
